syntax = 'proto3';
package cluster;
option go_package = 'github.com/BinChenn/interview_topn/pkg/multiple';

service GetTopN {
  // user interface, return topn by range[minkey,maxkey] in global data
  rpc GetAllTopN(TopNReq) returns (TopNRsp) {}
}

service GetWorkerTopN {
  // master interface, return topn by range[minkey, maxkey] in worker
  rpc GetWorkerTopN(TopNReq) returns (TopNRsp) {}
}

message TopNReq {
  int64 minKey = 1;
  int64 maxKey = 2;
  int64 topn = 3;
}

message KV {
  int64 key = 1;
  bytes value = 2;
}

message TopNRsp { repeated KV kvList = 1; }